fix(section-notice): fixed link text wrapping (#318)

--- a/packages/skin/src/sass/section-notice/section-notice.scss
+++ b/packages/skin/src/sass/section-notice/section-notice.scss
@@ -20,7 +20,18 @@ div[role="region"].section-notice,
 section.section-notice {
     display: grid;
     /* provide explicit structure up front, create loose markup model */
-    grid-template-columns: 32px auto min-content min-content;
+    grid-template-columns: 32px auto auto;
+}
+
+div[role="region"].section-notice:has(.section-notice__cta),
+section.section-notice:has(.section-notice__cta) {
+    grid-template-columns: 32px auto auto min-content;
+}
+
+div[role="region"].section-notice:has(.section-notice__cta)
+    .section-notice__footer,
+section.section-notice:has(.section-notice__cta) .section-notice__footer {
+    grid-column: 4;
 }
 
 /* TODO: Remove in 18.0.0 since Education Notice is now its own module. */
@@ -109,7 +120,7 @@ span[role="region"].section-notice {
 }
 
 .section-notice__footer {
-    grid-column: 4;
+    grid-column: 3;
     grid-row: 1;
     justify-self: flex-end;
     margin-top: 2px;
